message and cards ui changed to new ui

--- a/Client/html/partials/_search.html
+++ b/Client/html/partials/_search.html
@@ -15,7 +15,7 @@
                         <input id="txtSearch" type="text" class="searchBox form-control" placeholder="Enter City, State, Zip">
 
                     </div>
-                    <div class="col-md-3" style="padding-left: 0px; text-align: left">
+                    <div class="col-md-3" style="text-align: left">
                         <input id="btnSearch" type="button" class="searcBtn search_button btn btn-default" name="Search" value="Search">
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                             <option value="2">House</option>
                         </select>
                     </div>
-                    <div class="col-md-3" style="padding-left: 0px; text-align: left">
+                    <div class="col-md-3" style="text-align: left">
                         <h4 style="margin-bottom: 5px;">Bedrooms</h4>
                         <select id="ddBedroom" class="in-drop form-control">
                             <option value="">Select Bedrooms</option>
@@ -44,7 +44,7 @@
                         <h4 style="margin-bottom: 5px;">Square feet</h4>
                         <input id="txtSqft" type="text" class="form-control"  placeholder="Enter Square feet">
                     </div>
-                    <div class="col-md-3" style="padding-left: 0px; text-align: left">
+                    <div class="col-md-3" style="text-align: left">
                         <!--<h4 style="margin-bottom: 5px;">Budget</h4>-->
                         <!--<select id="ddBudget" class="in-drop form-control">-->
                         <!--<option value="">Budget</option>-->
@@ -65,6 +65,7 @@
                             <option value="2">Buy</option>
                         </select>
                     </div>
+                    <br>
                 </div>
             </div>
         </div>
