--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -353,6 +353,7 @@ ul.callbacks_tabs.callbacks1_tabs {
 }
 .banner1{
 	background: url(../images/4.jpg) no-repeat;
+	box-shadow: 0px 10px 10px 0px lightgrey;
 	width:100%;
 	min-height: 375px;
 	background-size: cover;
@@ -386,7 +387,7 @@ ul.callbacks_tabs.callbacks1_tabs {
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
-	 padding: 4em 0 5em;
+	 padding: 2em 0 5em;
 }
 .most-1 {
    background-color: #fff;
@@ -418,7 +419,7 @@ span.four {
   padding: 0.5em;
   position: absolute;
   top: 32%;
-  right: 32px;
+  right: 14px;
 }
 img.zoom-img:hover {
 	-webkit-transform: scale(1.15);
@@ -463,9 +464,7 @@ img.zoom-img {
 .services{
   	padding: 5em 0 3em;
 }
-.service-top {
-  	padding: 0em 0 2em;
-}
+
 .ser-top{
 	float:right;
 	width:77%;
@@ -3149,9 +3148,7 @@ span.four {
 .services {
   padding: 3em 0 3em;
 }
-.service-top {
-  padding: 0em 0 1em;
-}
+
 .service-top1 {
   margin: 1.5em 0 0;
 }
