Minor changing in Delete Listings

--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -66,6 +66,7 @@
 					</div> -->
 					<input type="hidden" id="lat" name="lat">
 					<input type="hidden" id="long" name="long">
+					<input type="hidden" id="listing-id" name="listing-id">
 				</div>
 				<div class="col-sm-7 buy-sin">
 					<div class="row">
@@ -84,6 +85,7 @@
 						<span id="listing-address-state"></span><br>
 						<span><span>Germany, </span><span id="listing-address-zip"></span></span>
 						</p>
+
 				</div>
 				<div class="clearfix"> </div>
 			</div>
