Revert "Ui improvements"

--- a/Client/html/partials/_listingCard.html
+++ b/Client/html/partials/_listingCard.html
@@ -11,55 +11,37 @@
                 <div class="adImage">
 
                 </div>
-
                 <div class="most-1">
+                    <div class="row">
+                        <h5 class="col-sm-9"><div data="" class="listing-title"></div>
+                       </h5>
+                       <div class="col-sm-3 realestateAd-status" style="padding: 0px;"></div>
+                    </div>
                     
+                    <hr class="divider">
                     <div class="adCardDetails">
+
                         <div class="row">
-                            <div class="col-sm-8 col-md-8 col-lg-8"><div data="" class="listing-title textOverflow"></div>
+                            <div class="col-md-6 row realEstateProperties">
+                                <div class="col-md-5 col-sm-3 adCardsAttribute">Price</div>
+                                <div class="col-md-2 col-sm-1 adCardsAttribute">:</div>
+                                <div class="col-md-5 col-sm-8 adCardsValue realEstatePrice"></div>
                             </div>
 
-                            <!-- <div class="col-sm-3 col-md-3 col-lg-3 realestateAd-status roundEdgedLabels"></div> -->
-                            <div class="col-sm-3 col-md-3 col-lg-3 realestateAd-type roundEdgedLabels"></div>
-                            <div class="col-sm-1 col-md-1 col-lg-1"></div>
-                        </div>
-                        <div class="listing-details">
-                            <div>
-                                <span class="realEstateType textOverflow"></span> / <span  class="textOverflow realEstateBeds"></span>
-                            </div>
-                            <div class="textOverflow realEstateAddress"></div>
-                        </div>
-                        
-                        <!-- <div class="row">
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">Price</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstatePrice"></div>
-                            </div>
-
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">City</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstateCity"></div>
+                            <div class="col-md-6 row realEstateProperties" style="margin-right: 10px;">
+                                <div class="col-md-5 col-sm-3 adCardsAttribute">City</div>
+                                <div class="col-md-2 col-sm-1 adCardsAttribute">:</div>
+                                <div class="col-md-5 col-sm-8 adCardsValue realEstateCity"></div>
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">State</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstateState"></div>
-                            </div>
-
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">Zip</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstateState">test</div>
-                            </div>
                             
-                        </div> -->
-                        <div class="btn-link">
-                            
+                            <div class="col-md-10 row realEstateProperties">
+                                <div class="col-md-3 col-sm-3 adCardsAttribute">State</div>
+                                <div class="col-md-1 col-sm-1 adCardsAttribute" style="margin-left: -5px;">:</div>
+                                <div class="col-md-8 col-sm-8 adCardsValue realEstateState"></div>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-7"></div>
@@ -74,7 +56,7 @@
 
         </div>
     </div>
-    <br>
+
     <div class="agent-section">
         <div class="service-top title-heading">
             <h3>Homies Agents</h3>
