added profile pages and some ui changes

--- a/Client/html/partials/_listingCard.html
+++ b/Client/html/partials/_listingCard.html
@@ -30,34 +30,7 @@
                             <div class="textOverflow realEstateAddress"></div>
                         </div>
                         
-                        <!-- <div class="row">
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">Price</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstatePrice"></div>
-                            </div>
-
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">City</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstateCity"></div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">State</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstateState"></div>
-                            </div>
-
-                            <div class="col-md-6 col-sm-6 col-lg-6 row realEstateProperties">
-                                <div class="col-md-5 col-sm-5 col-lg-5 adCardsAttribute">Zip</div>
-                                <div class="col-md-1 col-sm-1 col-lg-1 adCardsAttribute">:</div>
-                                <div class="col-md-6 col-sm-6 col-lg-6 textOverflow adCardsValue realEstateState">test</div>
-                            </div>
-                            
-                        </div> -->
+                      
                         <div class="btn-link">
                             
                         </div>
@@ -79,7 +52,7 @@
         <div class="service-top title-heading">
             <h3>Homies Agents</h3>
         </div>
-        <div class="row" id="agentCard" style="margin-left: 15px;">
+        <div class="row" id="agentCard" style="margin: 0px 2px;">
             
         </div>
     </div>
