--- a/Client/html/partials/_search.html
+++ b/Client/html/partials/_search.html
@@ -9,15 +9,13 @@
                     <p>YOUR DREAM HOME AWAITS </p>
                 </div>
 
-                <div class="row">
+                <div >
                     <br>
-                    <div class="col-md-9" style="text-align: right;">
+                    <div style="text-align: center;">
                         <input id="txtSearch" type="text" class="searchBox form-control" placeholder="Enter City, State, Zip">
 
                     </div>
-                    <div class="col-md-3" style="text-align: left">
-                        <input id="btnSearch" type="button" class="searcBtn search_button btn btn-default" name="Search" value="Search">
-                    </div>
+                    
                 </div>
                 <div class="row" style="color: #FFF">
                     <br>
@@ -45,19 +43,6 @@
                         <input id="txtSqft" type="text" class="form-control"  placeholder="Enter Square feet">
                     </div>
                     <div class="col-md-3" style="text-align: left">
-                        <!--<h4 style="margin-bottom: 5px;">Budget</h4>-->
-                        <!--<select id="ddBudget" class="in-drop form-control">-->
-                        <!--<option value="">Budget</option>-->
-                        <!--<option value="10000-200000">10000-200000</option>-->
-                        <!--<option value="20000-300000">20000-300000</option>-->
-                        <!--<option value="30000-400000">30000-400000</option>-->
-                        <!--<option value="40000-500000">40000-500000</option>-->
-                        <!--<option value="50000-600000">50000-600000</option>-->
-                        <!--<option value="60000-700000">60000-700000</option>-->
-                        <!--<option value="70000-800000">70000-800000</option>-->
-                        <!--<option value="80000-9000000">80000-9000000</option>-->
-                        <!--<option value="900000-10000000">900000-10000000</option>-->
-                        <!--</select>-->
                         <h4 style="margin-bottom: 5px;">Ad Type</h4>
                         <select id="ddAdType" class="in-drop form-control">
                             <option value="">Select Ad Type</option>
@@ -67,6 +52,11 @@
                     </div>
                     <br>
                 </div>
+                <br>
+                <div style="text-align: center;">
+                    <input id="btnSearch" style="width:12%" type="button" class="searcBtn search_button btn btn-default" name="Search" value="Search">
+                </div><br>
+                
             </div>
         </div>
     </div>
