--- a/Client/css/app.css
+++ b/Client/css/app.css
@@ -78,7 +78,7 @@
 
 .listing-image{
   width: 100%;
-    height: 100%;
+    height: 185px;
     /* width: 185px; */
     min-height: 195px
 }
@@ -430,7 +430,7 @@
   height: 160px;
     border: 1px solid grey;
     padding: 5px;
-    margin-top: 15px;
+    margin-top: -35px;
     background: white;
     position: absolute;
     width: 165px;
@@ -594,7 +594,8 @@ div.cell {
 }
 
 .realEstateAgent{
-  border: 1px solid lightgrey;
+  
+  box-shadow: 1px 1px 1px 1px lightgrey;
   margin:15px 0px;
 }
 
@@ -607,8 +608,12 @@ div.cell {
 }
 
 .agent-image{
-  width:89%;
-  height: 175px;
+      padding: 2px;
+    border: 2px solid #28db93;
+    border-radius: 50%;
+      width: 175px;
+    margin-top: 12px;
+    height: 175px;
 }
 .agentCardDetails{
   font-size: 11.5px;
@@ -683,6 +688,11 @@ div.cell {
   border-top: 1px solid lightgrey;
   margin: 0px;
   padding-top:6px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  display: none;
+  background: white;
  /*  padding-top:8px;
   height: 10vh;
   overflow: scroll;*/
@@ -718,3 +728,109 @@ div.cell {
     height:38px;
     border-radius: 50%;
 }
+
+.abdul-leftDiv{
+    text-align: center;
+  }
+  .abdul-personalDetails{
+    padding: 3px;
+  }
+  .title{
+    font-weight: bold;
+  }
+  .abdul-sectionBars{
+    padding: 4px 10px;
+    background: #4188e1;
+    color: white;
+  }
+  .abdul-subHeader{
+    color:#4188e1;
+    font-size: larger;
+  }
+  .abdul-subHeaderContent{
+    padding-left:15px;
+  }
+  .abdul-title{
+        padding: 5px 40px 0;
+  }
+  .about-profilePic{
+      width: 13rem;
+        height: 13rem;
+        border-radius: 50%;
+        border: 1px solid lightgrey;
+    }
+    .about-profileCard{
+      
+        padding: 2rem;
+        
+    }
+    .about-Role{
+          color: darkslategrey;
+          font-size: 14px;
+          font-weight: 350;
+    }
+    .about-aboutMe{
+      color: grey;  
+    }
+    .about-teamName{
+      color: #21225f;
+    }
+
+    .omer-profilelData{
+      margin-top:3px;
+    }
+    .omer-title{
+      font-weight: bold;
+    }
+    .omer-profilePic{
+      height: 15rem;
+    }
+    .omer-personalDetails{
+      margin-top: 20px;
+    }
+    .omer-subHeader{
+      margin-top:5px;
+      font-weight: bold;
+    }
+
+
+  .saud-profilePic{
+    height: 13rem;
+    border-radius: 50%;
+  }
+  .saud-subHeader{
+    margin-top:5px;
+    font-weight: bold;
+  }
+  .saud-bigFont{
+    font-size:larger;
+  }
+
+  .praveen-profilePic{
+      width: 10rem;
+        height: 10rem;
+        margin-top:3rem;
+        border-radius: 50%;
+        border: 1px solid lightgrey;
+    }
+    .praveen-profileCard{
+      
+        padding: 2rem;
+        
+    }
+    
+    .praveen-subHeading{
+      
+      text-transform: uppercase;
+    }
+    
+    .praveen-techIcon{
+      height: 4rem;
+      margin:18px;
+    }
+    .praveen-date{
+      font-size: large;
+        margin-top: 20px;
+        color: #2c5ca5;
+    }
+    
