--- a/Client/html/partials/_addNewListing.html
+++ b/Client/html/partials/_addNewListing.html
@@ -22,7 +22,7 @@
 			
 			<div>
 				<div class="form-label">Description</div>
-				<textarea id="listing-description" rows="5" cols="35"></textarea>
+				<textarea id="listing-description" style="border: 1px solid #dfdfdf" rows="5" cols="35"></textarea>
 			</div>
 			
 			<div class="row">
