added deleting listing functionality and validations for creating listing and comments

--- a/Client/css/app.css
+++ b/Client/css/app.css
@@ -837,4 +837,7 @@ div.cell {
         margin-top: 20px;
         color: #2c5ca5;
     }
-    
+    .actionBtns{
+      text-align: right;
+      display: none;
+    }
