--- a/Client/html/partials/_addNewListing.html
+++ b/Client/html/partials/_addNewListing.html
@@ -132,7 +132,8 @@
 				</div>
 				
 			</div>
-			<div>
+			<div class="uploadfile">
+				<div>Select one or multiple files at a time.</div>
 				<input type="file" id="listing-fileUpload" multiple onchange="checkUploadedFile()"/>
 			</div>
 			<div>
