--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -59,8 +59,14 @@
 					<p><span class="bath2">Kitchen </span>: <span id="listing-kitchen" class="two"></span></p>
 					<p><span class="bath">Area</span>: <span id="listing-area" class="two"></span></p>
 					<p><span class="bath2">Parking </span>:<span id="listing-parking" class="two"></span></p>
-					<p><span class="bath5">Type</span> : <span id="listing-type" class="two">23</span></p>
-					<p><span class="bath5">Price </span>:<span id="listing-price" class="two"></span></p>				 
+					<p><span class="bath5">Type</span> : <span id="listing-type" class="two"></span></p>
+					<p><span class="bath5">Price </span>:<span id="listing-price" class="two"></span></p>
+					<p><span class="bath5">Floors </span><span style="margin-left:-9px;">:</span><span id="listing-numberFloors" class="two"></span></p>
+					<p><span class="bath4"> Living Rooms </span><span style="margin-left:8px;">:</span><span id="listing-livingRoom" class="two"></span></p>	
+					<p><span class="bath5">Lot Area </span><span style="margin-left:-21px;">:</span><span id="listing-lot-area" class="two"></span></p>	
+						
+					
+										 
 					<!-- <div class="   right-side">
 						<a href="contact.html" class="hvr-sweep-to-right more" >Contact Builder</a>     
 					</div> -->
