minor change for textoverflow

--- a/Client/html/partials/_agentCard.html
+++ b/Client/html/partials/_agentCard.html
@@ -6,7 +6,7 @@
         <div class="most-1">
             <h5>
                 <div data="" class="agent-title">
-                    <div id="agent-0" class="view-agent-details" data-content='AgentName'></div>
+                    <div id="agent-0" class="view-agent-details textOverflow" data-content='AgentName'></div>
                 </div>
             </h5>
             <hr class="divider">
