--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -72,6 +72,7 @@
 					</div> -->
 					<input type="hidden" id="lat" name="lat">
 					<input type="hidden" id="long" name="long">
+					<input type="hidden" id="listing-id" name="listing-id">
 				</div>
 				<div class="col-sm-7 buy-sin">
 					<div class="row">
