--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -10,6 +10,7 @@ html,body{
 	background:#fff;
 	font-size: 100%;
 	font-family: 'Oxygen-Regular';
+	overflow-x: hidden;
 }
 body a{
 	transition: 0.5s all;
@@ -387,7 +388,7 @@ ul.callbacks_tabs.callbacks1_tabs {
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
-	 padding: 2em 0 5em;
+     padding: 1em 0 3em;
 }
 .most-1 {
    background-color: #fff;
@@ -887,6 +888,11 @@ font-family: 'Montserrat-Regular';
 /*--footer--*/
 .footer{
 	background:#141414;
+	width: 100%;
+  height: 100px;
+  /*position: absolute;*/
+  bottom: 0;
+  left: 0;
 }
 .amet-sed h4{
 	font-size: 1.5em;
