--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6,label,p{
 }
 /*--header--*/
 .header{
-  	background-color: #27da93; 
+  	background-color: #f44336; 
   	  padding: 0.8em 0;
 }
 .bottom-head {
@@ -177,7 +177,7 @@ i.glyphicon.glyphicon-menu-hamburger {
 	margin: 0 7px 0 10px;
 }
 .feed ul li a:hover{
-	color:#27da93;
+	color:#f44336;
 }
 /* start tabs */
 .sap_tabs{
@@ -210,7 +210,7 @@ i.glyphicon.glyphicon-menu-hamburger {
 }
 .resp-tab-active{
 	color:#fff;	
-	background:#27da93;
+	background:#f44336;
 }
 .resp-tab-item span{
 	font-size:1.1em;
@@ -244,7 +244,7 @@ h2.resp-accordion:hover{
 	color: #FFF;
 }
 .facts{
-	background-color:#27da93;
+	background-color:#f44336;
 	padding:2em  1.5em;
 }
 /*----*/
@@ -345,7 +345,7 @@ ul.callbacks_tabs.callbacks1_tabs {
   	padding: 0 0 0.3em;
 }
 .caption h3 span{
-	border-bottom: 7px solid #27DA93;
+	border-bottom: 7px solid #f44336;
 }
 .caption p{
 	color: #fff;
@@ -397,13 +397,13 @@ ul.callbacks_tabs.callbacks1_tabs {
 }
 .most-1 h5{
    	font-size: 1.2em;
-  	color: #27DA93;
+  	color: #f44336;
   	padding: 0em 0 0.3em;
     font-family: 'Montserrat-Regular';
 }
 .most-1 h5 a{
    	text-decoration:none;
-  	color: #27DA93;
+  	color: #f44336;
 }
 .most-1 h5 a:hover{
   	color: #000;
@@ -413,7 +413,7 @@ ul.callbacks_tabs.callbacks1_tabs {
    color: #000;
 }
 span.four {
-  background-color: #27DA93;
+  background-color: #f44336;
   font-size: small;
   color: #FFF;
   display: block;
@@ -474,7 +474,7 @@ img.zoom-img {
 	font-size: 1.4em;
 	text-transform: uppercase;
 	font-family: 'Montserrat-Regular';
-	color:#27da93 ;
+	color:#f44336 ;
 }
 .ser-top p{
 	color:#a3a3a3;
@@ -499,7 +499,7 @@ img.zoom-img {
 	position: relative;
 	z-index: 1;
 	color:#8e8e8e;
-  	border:3px solid #27da93;
+  	border:3px solid #f44336;
   	line-height: 4.5em;
   	font-size: 1em;
 }
@@ -670,8 +670,8 @@ p.cost {
 a.more{
 	text-decoration: none;
 	font-size: 0.9em;
-	border: 1px solid #27da93;
-	color:#27da93;
+	border: 1px solid #f44336;
+	color:#f44336;
 	padding: 0.3em 0.7em;
 	display:inline-block;
 	margin: 1em 0 0;
@@ -709,7 +709,7 @@ a.more:hover{
   background-size: cover; 
 }
 .mid-content{
-	background:#27da93;
+	background:#f44336;
 	padding:2em;
 	width:35%;
 	margin:5em auto 0;
@@ -760,7 +760,7 @@ a.more-in{
   left: 0;
   right: 0;
   bottom: 0;
-  background: #27da93;
+  background: #f44336;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
@@ -783,7 +783,7 @@ a.more-in:before{
 	background:#fff;
 }
 a.more-in:hover{
-	color: #27da93;
+	color: #f44336;
 }
 /*--//middle--*/
 /*--content-bottom--*/
@@ -836,7 +836,7 @@ i.dolor{
 	padding: 1em 1em 0em;
 }
 .men span {
-	color:#27da93;
+	color:#f44336;
 	font-size: 1.2em;
 	font-family: 'Montserrat-Regular';
 }
@@ -914,7 +914,7 @@ ul.nav-bottom li  a{
 	margin: 0.5em 0;
 }
 ul.nav-bottom li  a:hover{
-	color:#27da93;
+	color:#f44336;
 }
 .amet-sed p{
 	color:#989696;
@@ -926,7 +926,7 @@ ul.nav-bottom li  a:hover{
 	font-size:0.9em;
 }
 .footer-class  p a{
-	color:#27da93;
+	color:#f44336;
 	text-decoration:none;
 }
 .footer-class  p a:hover{
@@ -1006,7 +1006,7 @@ transform: rotatey(360deg);
   	margin-top: 1.8em;
 }
 .banner-buying h3 span{
-	border-bottom: 7px solid #27DA93;
+	border-bottom: 7px solid #f44336;
 }
 /*----*/
 .menu-right{
@@ -1054,7 +1054,7 @@ ul {
 }
 .menu ul li a:hover{
 	background: #fbfbfb;
- 	 color: #27DA93;
+ 	 color: #f44336;
 }
 ul.cute {
   background-color: #fff;
@@ -1081,7 +1081,7 @@ ul.kid-menu li.menu-kid-left{
 .price-top h4,.price-top1 h4{
 	font-size: 1.2em;
   	font-family: 'Montserrat-Regular';
-  	color: #27da93;
+  	color: #f44336;
   	margin: 0 0 0.5em;
 }
 select.in-drop {
@@ -1394,13 +1394,13 @@ span.fur-money{
 	color:#000;
 }
 .fur1 h6{
-	color:#27da93;
+	color:#f44336;
 	font-size: 1em;
 	font-family: 'Montserrat-Regular';
 	margin: 0.3em 0;
 }
 .fur1 h6 a{
-	color:#27da93;
+	color:#f44336;
 	text-decoration: none;
 }
 .fur1 h6 a:hover{
@@ -1497,7 +1497,7 @@ option.rm{
 }
 .single-bottom h4{
 	font-size: 1.3em;
-  	color: #27da93;
+  	color: #f44336;
   	font-family: 'Montserrat-Regular';
 }
 /*--checkbox--*/
@@ -1560,7 +1560,7 @@ option.rm{
 .middle-side h4 {
 	font-size: 1.2em;
   	text-transform: uppercase;
- 	color: #27DA93;
+ 	color: #f44336;
 	margin: 0 0 0.5em;
 	font-family: 'Montserrat-Regular';
 }
@@ -1611,7 +1611,7 @@ option.rm{
   padding: 1em 2em;
 }
 a.builder{
-	background: #27da93;
+	background: #f44336;
 	font-size: 0.9em;
 	padding: 0.4em 0.8em;
 	text-decoration: none;
@@ -1646,7 +1646,7 @@ a.builder:before {
 	color: #000;
 }
 .box-text p a:hover {
-   color: #27DA93;
+   color: #f44336;
 }
 a.in-box{
 	font-size: 0.8em;
@@ -1656,7 +1656,7 @@ a.in-box{
   	display: block;
 }
 a.in-box:hover {
-  	color: #27da93;
+  	color: #f44336;
 }
 .single-box-img {
   	padding: 1.5em 0 0;
@@ -1670,7 +1670,7 @@ a.in-box:hover {
 }
 .single-box-right h4{
 	font-size: 1.3em;
- 	color: #27DA93;
+ 	color: #f44336;
 	font-family: 'Montserrat-Regular';
 }
 /*--//single--*/
@@ -1774,8 +1774,8 @@ font-family: 'Montserrat-Regular';
   font-size: 0.9em;
   padding: 0.4em 0.8em;
   text-decoration: none;
-  color: #27da93;
-  border: 1px solid #27da93;
+  color: #f44336;
+  border: 1px solid #f44336;
 }
 .loan-point img{
 	margin: 0 auto;
@@ -1792,7 +1792,7 @@ font-family: 'Montserrat-Regular';
 	line-height: 2em;
 }
 .loan-point1 ul li a:hover {
-  color: #27da93;
+  color: #f44336;
 }
 .loan-point1 ul li i{
 	font-size: 0.8em;
@@ -1841,7 +1841,7 @@ font-family: 'Montserrat-Regular';
   margin: 0 1%;
 }
 .loan-col h4 ,.loan-col1 h4{
-    color:#27da93;
+    color:#f44336;
   	font-family: 'Montserrat-Regular';
   	padding: 1em 0;
   	  font-size: 1.2em;
@@ -1898,8 +1898,8 @@ select.drop-select1 {
   	margin: 0.5em 0 1em;
 }
 label.hvr-sweep-to-right{
-	color: #27DA93;
-	 border: 1px solid #27DA93;
+	color: #f44336;
+	 border: 1px solid #f44336;
 	   font-weight: normal;
 }
 .sub input[type="submit"] {
@@ -1965,7 +1965,7 @@ font-family: 'Montserrat-Regular';
 	  float: left;
   	font-size: 1.8em;
   	color: #fff;
-  	background: #27DA93;
+  	background: #f44336;
   	border-radius: 100px;
   	width: 50px;
   	height: 50px;
@@ -1975,13 +1975,13 @@ font-family: 'Montserrat-Regular';
 .dealer-grid-top h6{
 	float: right;
 	font-size: 1.4em;
-  	color: #27DA93;
+  	color: #f44336;
   	width: 78%;
   	line-height: 1.3em;
   	font-family: 'Montserrat-Regular';
 }
 .dealer-grid-top h6 a{
-  	color:#27DA93;
+  	color:#f44336;
   	text-decoration: none;
 }
 .dealer-grid-top h6 a:hover{
@@ -2007,7 +2007,7 @@ font-family: 'Montserrat-Regular';
 	  font-family: 'Montserrat-Regular';
 }
 .top-deal1 h5 a{
-	color:#27DA93;
+	color:#f44336;
 	text-decoration: none;
 }
 .top-deal1 h5 a:hover{
@@ -2067,7 +2067,7 @@ font-family: 'Montserrat-Regular';
 }
 .about-in h6 a{
 	text-decoration:none;
-  	color: #27DA93;
+  	color: #f44336;
 }
 .about-in h6 a:hover{
   	color: #000;
@@ -2105,7 +2105,7 @@ font-family: 'Montserrat-Regular';
 }
 .about-mid h6 a{
 	text-decoration:none;
-  	color: #27da93;
+  	color: #f44336;
 }
 .about-mid h6 a:hover{
   	color: #000;
@@ -2117,7 +2117,7 @@ font-family: 'Montserrat-Regular';
 }
 .about-mid1{
 	text-align:center;
-	background:#27DA93;
+	background:#f44336;
 	padding:4em 2em;
 }
 .about-mid1 p{
@@ -2155,7 +2155,7 @@ font-family: 'Montserrat-Regular';
 	padding: 0 0 0.3em;
 	font-size: 1.4em;
 	text-transform: uppercase;
-	color:#27DA93;
+	color:#f44336;
 	font-family: 'Montserrat-Regular';
 }
 .beautiful label{
@@ -2179,13 +2179,13 @@ font-family: 'Montserrat-Regular';
 	padding: 5em 0;
 }
 .bottom-about h4{
-	color: #27da93;
+	color: #f44336;
     font-size: 1.3em;
   font-family: 'Montserrat-Regular';
     line-height: 1.5em;
 }
 .bottom-about h4 a{
-	color: #27da93;
+	color: #f44336;
     text-decoration: none;
 }
 .bottom-about h4 a:hover{
@@ -2241,7 +2241,7 @@ font-family: 'Montserrat-Regular';
 }
 .event h6 a{
 	text-decoration:none;
-	color:#27da93;
+	color:#f44336;
 	display: inline-block;
 }
 .event h6 a:hover{
@@ -2280,10 +2280,10 @@ font-family: 'Montserrat-Regular';
     font-size: 1.1em;
     margin: 1em 0 0.3em;
   font-family: 'Montserrat-Regular';
-    color:#27DA93;
+    color:#f44336;
 }
 .blog-top h4 a{
-	color: #27DA93;
+	color: #f44336;
 	text-decoration: none;
 }
 .blog-top h4 a:hover {
@@ -2321,7 +2321,7 @@ ul.blog-links li a {
 ul.blog-links li a i{
   	width: 30px;
   	height: 30px;
-  	background: #27da93;
+  	background: #f44336;
   	float: left;
   	color: #fff;
   	font-size: 12px;
@@ -2353,7 +2353,7 @@ ul.blog-links li a i{
 }
 .blog-list h4,.blog-list1 h4,.blog-list2 h4{
 	font-size:1.4em;
-	color:#27da93;
+	color:#f44336;
 	margin-bottom:0.8em;
 	text-transform: uppercase;
 	font-family: 'Montserrat-Regular';
@@ -2374,7 +2374,7 @@ ul.blog-links li a i{
 	color:#000;
 }
 .blog-text p a:hover {
-  color: #27da93;
+  color: #f44336;
 }
 .blog-text span{
 	font-size:0.8em;
@@ -2382,7 +2382,7 @@ ul.blog-links li a i{
 }
 .blog-text span a{
 	text-decoration: none;
-	color:#27DA93;
+	color:#f44336;
 }
 .blog-list-top {
   padding: 0.5em 0 1.5em;
@@ -2403,7 +2403,7 @@ ul.blog-links li a i{
   	margin: 0 0 0.6em;
 }
 .blog-list2 ul li a:hover {
-  background: #27da93;
+  background: #f44336;
 }
 .blog {
   padding: 5em 0;
@@ -2415,8 +2415,8 @@ ul.pagination {
   border-radius: 0 !important;
 }
 .pagination > .active > a,.pagination > .active > a:hover {
-  background-color: #27da93;
-  border-color: #27da93;
+  background-color: #f44336;
+  border-color: #f44336;
 }
 /*--//blog--*/
 /*--blog_single--*/
@@ -2425,7 +2425,7 @@ img.media-object {
 }
 h4.media-heading {
   font-size: 1.2em;
-  color: #27da93;
+  color: #f44336;
 font-family: 'Montserrat-Regular';
 }
 .media-body p {
@@ -2542,7 +2542,7 @@ font-family: 'Montserrat-Regular';
 }
 .contact-address h5{
 	display: block;
-  	color: #27DA93;
+  	color: #f44336;
   font-size: 1.3em;
   font-family: 'Montserrat-Regular';
 }
@@ -2554,7 +2554,7 @@ font-family: 'Montserrat-Regular';
    text-decoration: none;
 }
 .contact-top1 p a:hover{
-   color: #27da93;
+   color: #f44336;
 }
 .contact-top {
   padding: 4em 0 5em;
@@ -2585,7 +2585,7 @@ font-family: 'Montserrat-Regular';
 }
 .terms h4 {
   	font-size: 1.5em;
-  	color:#27da93;
+  	color:#f44336;
 	font-family: 'Montserrat-Regular';
 }
 .terms p{
@@ -2606,7 +2606,7 @@ ul.terms-start li a{
 	line-height: 2em;
 }
 ul.terms-start li a:hover {
-  color: #27DA93;
+  color: #f44336;
 }
 ul.terms-start li a i{
 	display: inline-block;
@@ -2640,7 +2640,7 @@ ul.terms-start li a i{
 }
 .privacy h4 {
   	font-size: 1.5em;
-  	color:#27da93;
+  	color:#f44336;
 	font-family: 'Montserrat-Regular';
 }
 .privacy p{
@@ -2661,7 +2661,7 @@ ul.privacy-start li a{
 	line-height: 2em;
 }
 ul.privacy-start li a:hover {
-  color: #27DA93;
+  color: #f44336;
 }
 ul.privacy-start li a i{
 	display: inline-block;
@@ -2821,7 +2821,7 @@ ul.login-icons li:nth-child(2),ul.login-icons li:nth-child(4) {
 	color:#000;
 }
 .form-info p a:hover{
-	color:#27DA93;
+	color:#f44336;
 }
 /*--//login--*/
 /*--feedback--*/
@@ -2894,7 +2894,7 @@ ul.login-icons li:nth-child(2),ul.login-icons li:nth-child(4) {
 	padding: 5em 0;
 }
 .questions h5{
-	color: #27da93;
+	color: #f44336;
 	font-size: 1.3em;
 	font-family: 'Montserrat-Regular';
 	line-height: 1.6em;
@@ -2933,7 +2933,7 @@ ul.login-icons li:nth-child(2),ul.login-icons li:nth-child(4) {
 }
 .career h4 {
   font-size: 1.4em;
-  color: #27DA93;
+  color: #f44336;
   margin: 0.5em 0;
   font-family: 'Montserrat-Regular';
 }
@@ -2952,7 +2952,7 @@ ul.career-start li a {
   line-height: 2em;
 }
 ul.career-start li a:hover {
-  color: #27DA93;
+  color: #f44336;
 }
 ul.career-start li a i {
   display: inline-block;
@@ -4101,7 +4101,7 @@ ul.right-icons {
   font-size: 1.6em;
 }
 .caption h3 span {
-  border-bottom: 4px solid #27DA93;
+  border-bottom: 4px solid #f44336;
 }
 .caption p {
   font-size: 1.1em;
