commiting theme changes.

--- a/Client/html/partials/_search.html
+++ b/Client/html/partials/_search.html
@@ -5,8 +5,9 @@
 
             <div style="margin-top:5%">
                 <div class="home-caption">
-                    <h3><span>Homi</span>ez</h3>
-                    <p>YOUR DREAM HOME AWAITS </p>
+                    <a href="#">
+                        <img height="250px;" src="/images/logo.png" alt="Company logo"> 
+                    </a>
                 </div>
 
                 <div >
@@ -20,7 +21,7 @@
                 <div class="row" style="color: #FFF">
                     <br>
                     <div class="col-md-3" style="text-align: left;">
-                        <h4 style="margin-bottom: 5px;">Type Of Accomodation</h4>
+                        <h4 style="margin-bottom: 5px;color: black;font-weight: bold;">Type Of Accomodation</h4>
                         <select id="ddType" class="in-drop form-control">
                             <option value="">Select Type</option>
                             <option value="1">Appartment</option>
@@ -28,7 +29,7 @@
                         </select>
                     </div>
                     <div class="col-md-3" style="text-align: left">
-                        <h4 style="margin-bottom: 5px;">Bedrooms</h4>
+                        <h4 style="margin-bottom: 5px;color: black;font-weight: bold;">Bedrooms</h4>
                         <select id="ddBedroom" class="in-drop form-control">
                             <option value="">Select Bedrooms</option>
                             <option value="1">1</option>
@@ -39,11 +40,11 @@
                         </select>
                     </div>
                     <div class="col-md-3" style="text-align: left;">
-                        <h4 style="margin-bottom: 5px;">Square feet</h4>
+                        <h4 style="margin-bottom: 5px;color: black;font-weight: bold;">Square feet</h4>
                         <input id="txtSqft" type="text" class="form-control"  placeholder="Enter Square feet">
                     </div>
                     <div class="col-md-3" style="text-align: left">
-                        <h4 style="margin-bottom: 5px;">Ad Type</h4>
+                        <h4 style="margin-bottom: 5px;color: black;font-weight: bold;">Ad Type</h4>
                         <select id="ddAdType" class="in-drop form-control">
                             <option value="">Select Ad Type</option>
                             <option value="1">Rental</option>
