--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -353,7 +353,7 @@ ul.callbacks_tabs.callbacks1_tabs {
 	margin: 0.5em 0em 0;
 }
 .banner1{
-	background: url(../images/4.jpg) no-repeat;
+	/*background: url(../images/4.jpg) no-repeat;*/
 	box-shadow: 0px 10px 10px 0px lightgrey;
 	width:100%;
 	min-height: 375px;
@@ -382,6 +382,7 @@ ul.callbacks_tabs.callbacks1_tabs {
 }
 .content-grid{
 	/*background: url(../images/back1.jpg);*/
+	background: #FFF;
 	width:100%;
 	min-height: 500px;
 	background-size: cover;
