commiting bugs changes.

--- a/Client/html/partials/_addNewListing.html
+++ b/Client/html/partials/_addNewListing.html
@@ -12,7 +12,7 @@
 				</div>
 				<div class="col-sm-2 ad-status">
 					<div class="form-label">Status</div>
-					<select id="listing-parking" class="in-drop form-control">
+					<select id="listing-status" class="in-drop form-control">
 						<option value="1">Available</option>
 						<option value="2">Sold Out</option>
 					</select>
